--- a/example.env
+++ b/example.env
@@ -2,3 +2,4 @@ NODE_ENV=development
 PORT=8000
 DB=ADD_YOUR_OWN_DB_CONNECTION
 JWT_SECRET=ADD_YOUR_JWT_SECRET
+PAYPAL_CLIENT_ID=ADD_YOUR_PAYPAL_CLIENT_ID
