--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,24 @@ package-lock.json
 /backend/seeder.js
 # folders
 /backend/data
-/node_modules
+node_modules
+
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
