--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "fs-extra": "^11.1.1",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "shapefile": "^0.6.6"
   },
   "devDependencies": {
     "concurrently": "^8.2.0",
